added github pages link

--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
       Sources:<br />
       <p>Assistance from Peers: Nihal Ernest</p>
       <a href="//bl.ocks.org/mbostock/5562380">CA Geomap</a><br />
+      <p>
+        Github pages link:
+        <a href="https://rpasha17.github.io/Assignment7_Geomapping/"
+          >Github Pages</a
+        >
+      </p>
     </h4>
 
     <script>
