--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </h2>
     <h4>
       Sources:<br />
-      <p>Assistance from Peers: Nihal Ernest</p>
+      <p>Students: Nihal Ernest</p>
       <a href="//bl.ocks.org/mbostock/5562380">CA Geomap</a><br />
       <p>
         Github pages link:
