--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         border-radius: 5px;
       }
     </style>
-    <script src="//d3js.org/d3.v4.min.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://d3js.org/topojson.v1.min.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-    <script src="//d3js.org/topojson.v1.min.js"></script>
   </head>
 
   <body>
